# mis-django-backend-graphql

./: .dockerignore  .gitignore  Dockerfile  README.md  data.dump  pyproject.toml  requirements.txt  requirements_no_versions.txt
.github/workflows/: buildandpush.yml
conf/: gunicorn_config.py
mis/: db.sqlite3  docker-compose.yml
mis/api/: admin.py  models.py  schema.py  urls.py
mis/api/migrations/: 0001_initial.py
mis/api/schemas/collegeclass/: schema.py
mis/api/schemas/department/: schema.py
mis/api/schemas/period/: schema.py
mis/api/schemas/shift/: schema.py
mis/api/schemas/subject/: schema.py
mis/api/schemas/teacher/: schema.py
mis/api/schemas/timingField/: schema.py
mis/api/schemas/users/: schema.py
mis/api/schemas/year/: schema.py
mis/mis/: asgi.py  settings.py  urls.py  wsgi.py
mis/quiz/: admin.py  models.py  schema.py  urls.py
mis/quiz/migrations/: 0001_initial.py
