[tool.poetry]
name = "mis-django-backend-graphql"
version = "0.1.0"
description = ""
authors = ["chhatra <cshah@growthzilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
click = "^8.1.7"
crispy-bootstrap5 = "^2024.2"
django = "^5.1.1"
django-cors-headers = "^4.4.0"
django-crispy-forms = "^2.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
h11 = "^0.14.0"
packaging = "^24.1"
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"
sqlparse = "^0.5.1"
typing-extensions = "^4.12.2"
uvicorn = "^0.30.6"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
django-graphql-jwt = "^0.4.0"
graphene = "^3.3"
graphene-django = "^3.2.2"
graphql-core = "^3.2.4"
graphql-relay = "^3.2.0"
promise = "^2.3"
six = "^1.16.0"
text-unidecode = "^1.3"
aniso8601 = "^9.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
